Add portfolio endpoint.
